tests/specs/EnumDeclaration.txt
# mod.ts
export enum Enum {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> file:///mod.ts:1:1
  | 
1 | export enum Enum {}
  | ^

# output.txt
Defined in file:///mod.ts:1:1

enum Enum



# output.json
[
  {
    "kind": "enum",
    "name": "Enum",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "enumDef": {
      "members": []
    }
  }
]
